# mob_demo

./: .gitignore  LICENSE  README.md  mix.exs  mob.exs
android/: local.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mob/stock_app/: MainActivity.kt  MobBridge.kt  MobNode.kt  MobScannerActivity.kt
android/app/src/main/jni/: CMakeLists.txt  beam_jni.c
config/: config.exs
ios/: AppDelegate.m  Info.plist  beam_main.m  build.sh
lib/stock_app/: app.ex  config_screen.ex  detail_screen.ex  home_screen.ex  repo.ex  round.ex  stock_price.ex  stock_simulator.ex
priv/repo/migrations/: 20000101000000_create_rounds.exs  20000101000001_create_stock_prices.exs
src/: stock_app.erl
